# customer_churn_project

./: EDA.ipynb  README.md  main.py  pyproject.toml  shap_force_plot.html
